add jenkins ingress configuration

--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -1,6 +1,7 @@
 master:
   image: "jenkins/jenkins"
   tag: "lts"
+  serviceType: ClusterIP
   installPlugins:
     - credentials-binding
     - cucumber-reports
