--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -1,6 +1,7 @@
 master:
   image: "jenkins/jenkins"
   tag: "lts"
+  jenkinsUriPrefix: "/jenkins"
   serviceType: ClusterIP
   installPlugins:
     - credentials-binding
@@ -15,3 +16,17 @@ master:
 persistence: 
   enabled: true
   storageClass: jelastic-dynamic-volume
+ingress:
+  enabled: true
+  apiVersion: "networking.k8s.io/v1beta1"
+  labels: {}
+  annotations: 
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
+  path: "/jenkins"
+  # configures the hostname e.g. jenkins.example.com
+  hostName:
+  tls:
+  # - secretName: jenkins.cluster.local
+  #   hosts:
+  #     - jenkins.cluster.local
