--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -19,9 +19,7 @@ ingress:
   enabled: true
   apiVersion: "networking.k8s.io/v1beta1"
   labels: {}
-  annotations: 
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
+  annotations: { kubernetes.io/ingress.class: nginx, nginx.ingress.kubernetes.io/ssl-redirect: 'false' }
   path: "/jenkins"
   # configures the hostname e.g. jenkins.example.com
   hostName:
