--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -17,7 +17,7 @@ persistence:
   storageClass: jelastic-dynamic-volume
 ingress:
   enabled: true
-  apiVersion: networking.k8s.io/v1beta1
+  apiVersion: extensions/v1beta1
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/ssl-redirect: 'false'
   # annotations: { kubernetes.io/ingress.class: nginx, nginx.ingress.kubernetes.io/ssl-redirect: 'false' }
