--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -18,13 +18,7 @@ persistence:
 ingress:
   enabled: true
   apiVersion: extensions/v1beta1
-  kubernetes.io/ingress.class: nginx
-  nginx.ingress.kubernetes.io/ssl-redirect: 'false'
-  # annotations: { kubernetes.io/ingress.class: nginx, nginx.ingress.kubernetes.io/ssl-redirect: 'false' }
+  # kubernetes.io/ingress.class: nginx
+  # nginx.ingress.kubernetes.io/ssl-redirect: 'false'
+  annotations: { kubernetes.io/ingress.class: nginx, nginx.ingress.kubernetes.io/ssl-redirect: 'false' }
   path: /ci
-  # configures the hostname e.g. jenkins.example.com
-  hostName:
-  tls:
-  # - secretName: jenkins.cluster.local
-  #   hosts:
-  #     - jenkins.cluster.local
