--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -12,13 +12,13 @@ master:
     - kubernetes
     - workflow-aggregator
     - workflow-job
+  jenkinsUriPrefix: /ci
 persistence: 
   enabled: true
   storageClass: jelastic-dynamic-volume
 ingress:
   enabled: true
   apiVersion: extensions/v1beta1
-  # kubernetes.io/ingress.class: nginx
-  # nginx.ingress.kubernetes.io/ssl-redirect: 'false'
-  annotations: { kubernetes.io/ingress.class: nginx, nginx.ingress.kubernetes.io/ssl-redirect: 'false' }
+  kubernetes.io/ingress.class: nginx
+  nginx.ingress.kubernetes.io/ssl-redirect: 'false'
   path: /ci
