--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -13,13 +13,13 @@ master:
     - workflow-aggregator
     - workflow-job
   # jenkinsUriPrefix: /ci
-  ingress:
-    enabled: true
-    apiVersion: extensions/v1beta1
-    annotations:
-      kubernetes.io/ingress.class: nginx
-      nginx.ingress.kubernetes.io/ssl-redirect: 'false'
-    path: /ci
+  # ingress:
+  #   enabled: true
+  #   apiVersion: extensions/v1beta1
+  #   annotations:
+  #     kubernetes.io/ingress.class: nginx
+  #     nginx.ingress.kubernetes.io/ssl-redirect: 'false'
+  #   path: /ci
 persistence: 
   enabled: true
   storageClass: jelastic-dynamic-volume
