--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -12,14 +12,14 @@ master:
     - kubernetes
     - workflow-aggregator
     - workflow-job
-  # jenkinsUriPrefix: /ci
-  # ingress:
-  #   enabled: true
-  #   apiVersion: extensions/v1beta1
+  jenkinsUriPrefix: /ci
+  ingress:
+    enabled: true
+    apiVersion: extensions/v1beta1
   #   annotations:
   #     kubernetes.io/ingress.class: nginx
   #     nginx.ingress.kubernetes.io/ssl-redirect: 'false'
-  #   path: /ci
+    path: /ci
 persistence: 
   enabled: true
   storageClass: jelastic-dynamic-volume
