--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -16,9 +16,9 @@ master:
   ingress:
     enabled: true
     apiVersion: extensions/v1beta1
-  #   annotations:
-  #     kubernetes.io/ingress.class: nginx
-  #     nginx.ingress.kubernetes.io/ssl-redirect: 'false'
+    annotations:
+      kubernetes.io/ingress.class: nginx
+      nginx.ingress.kubernetes.io/ssl-redirect: 'false'
     path: /ci
 persistence: 
   enabled: true
