fix jenkins config

--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -12,6 +12,7 @@ master:
     - kubernetes
     - workflow-aggregator
     - workflow-job
+  # this parameter can be set instead of the ingress.kubernetes.io/rewrite-target annotation
   jenkinsUriPrefix: /ci
   ingress:
     enabled: true
@@ -19,7 +20,10 @@ master:
     annotations:
       kubernetes.io/ingress.class: nginx
       nginx.ingress.kubernetes.io/ssl-redirect: 'false'
+      # this parameter can be set instead of jenkinsUriPrefix
+      # nginx.ingress.kubernetes.io/rewrite-target: /$2
     path: /ci
+    # hostName: ci.env-8958284.hidora.com
 persistence: 
   enabled: true
   storageClass: jelastic-dynamic-volume
