--- a/ui/ingress.yaml
+++ b/ui/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: default
   annotations:
     kubernetes.io/ingress.class: nginx
+    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
     nginx.ingress.kubernetes.io/ssl-redirect: 'false'
 spec:
   rules:
@@ -14,4 +15,4 @@ spec:
             backend:
               serviceName: admin-ui
               # TODO: we want ports 80 and 443
-              servicePort: 2015
+              servicePort: 8080
