--- a/ui/service.yaml
+++ b/ui/service.yaml
@@ -10,6 +10,14 @@ spec:
     - protocol: TCP
       port: 8080
       targetPort: 8080
+    # - name: http
+    #   protocol: TCP
+    #   port: 80
+    #   targetPort: 80
+    # - name: https
+    #   protocol: TCP
+    #   port: 443
+    #   targetPort: 443
   selector:
     app: admin-ui
   type: ClusterIP
