--- a/ui/service.yaml
+++ b/ui/service.yaml
@@ -7,17 +7,10 @@ metadata:
     app: admin-ui
 spec:
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 8080
       targetPort: 8080
-    # - name: http
-    #   protocol: TCP
-    #   port: 80
-    #   targetPort: 80
-    # - name: https
-    #   protocol: TCP
-    #   port: 443
-    #   targetPort: 443
   selector:
     app: admin-ui
   type: ClusterIP
